# advent_of_code

./: README.md  meson.build
.devcontainer/: Dockerfile
2022/: meson.build
2022/include/: inc.h  rps.h
2022/src/day1/: calorie_counting.cpp
2022/src/day2/: rock_paper_scissors.cpp
2022/src/day3/: rucksack_reorg.cpp
2022/src/day5/: supply_stacks.cpp
2022/src/day7/: no_space.cpp
2023/: meson.build
include/: files.h  rps.h
src/: calorie_counting.cpp
src/day1/: calorie_counting.cpp
src/day2/: rock_paper_scissors.cpp
src/day3/: rucksack_reorg.cpp
src/day4/: camp_cleanup.cpp
src/day5/: supply_stacks.cpp
src/day6/: tuning_trouble.cpp
src/day7/: no_space.cpp
src/day8/: tree_house.cpp
